# neo4j-wikipedia

./: .gitignore  main.py  populate_db.py  pyproject.toml  requirements.txt
static/: style.css
templates/: index.html
